--- a/html/admin/adminMain.html
+++ b/html/admin/adminMain.html
@@ -29,11 +29,11 @@
 	</header>
 	<main id="main" class="main">
 	    <div class="pagetitle">
-			<h1>ADMIN</h1>
+			<h1>관리</h1>
       			<nav>
         		<ol class="breadcrumb">
           			<li class="breadcrumb-item"><a href="#">KOKOA BANK</a></li>
-          			<li class="breadcrumb-item active">ADMIN</li>
+          			<li class="breadcrumb-item active">관리</li>
         		</ol>
       		</nav>
     	</div>
@@ -45,103 +45,102 @@
 	              			<!-- Bordered Tabs -->
 	              			<ul class="nav nav-tabs nav-tabs-bordered">
 				                <li class="nav-item">
-	            			    	<button class="nav-link active text-dark" data-bs-toggle="tab" data-bs-target="#profile-overview">Overview</button>
+	            			    	<button class="nav-link active text-dark" data-bs-toggle="tab" data-bs-target="#profile-overview">개요</button>
 	                			</li>
 				                <li class="nav-item">
-	                  				<button class="nav-link text-dark" data-bs-toggle="tab" data-bs-target="#profile-edit">Edit Profile</button>
+	                  				<button class="nav-link text-dark" data-bs-toggle="tab" data-bs-target="#profile-edit">프로필 수정</button>
 	                			</li>
 	                			<li class="nav-item">
-	                  				<button class="nav-link text-dark" data-bs-toggle="tab" data-bs-target="#profile-change-password">Change Password</button>
+	                  				<button class="nav-link text-dark" data-bs-toggle="tab" data-bs-target="#profile-change-password">비밀번호 변경</button>
 	                			</li>
-	
 	              			</ul>
 	              			<div class="tab-content pt-2">
 	                			<div class="tab-pane fade show active profile-overview" id="profile-overview">
-	                  				<h5 class="card-title">About</h5>
-	                  				<p class="small fst-italic">Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga sequi sed ea saepe at unde.</p>
-	                  				<h5 class="card-title">Profile Details</h5>
+	                  				<h5 class="card-title">KAKAO BANK</h5>
+	                  				<p class="small fst-italic">KAKAO BANK 관리자 메인 페이지</p>
+	                  				<h5 class="card-title">프로필</h5>
 	                  				<div class="row">
-	                    				<div class="col-lg-3 col-md-4 label ">Full Name</div>
-	                    				<div class="col-lg-9 col-md-8">Kevin Anderson</div>
+	                    				<div class="col-lg-3 col-md-4 label ">이름</div>
+	                    				<div class="col-lg-9 col-md-8">이준혁</div>
 	                  				</div>
 	                  				<div class="row">
-	                    				<div class="col-lg-3 col-md-4 label">Company</div>
-	                    				<div class="col-lg-9 col-md-8">Lueilwitz, Wisoky and Leuschke</div>
+	                    				<div class="col-lg-3 col-md-4 label">성별</div>
+	                    				<div class="col-lg-9 col-md-8">남자</div>
 	                  				</div>
 				                 	<div class="row">
-				                    	<div class="col-lg-3 col-md-4 label">Job</div>
-				                    	<div class="col-lg-9 col-md-8">Web Designer</div>
+				                    	<div class="col-lg-3 col-md-4 label">생년월일</div>
+				                    	<div class="col-lg-9 col-md-8">1991.02.10</div>
 				                  	</div>
 	                  				<div class="row">
-	                    				<div class="col-lg-3 col-md-4 label">Country</div>
-	                    				<div class="col-lg-9 col-md-8">USA</div>
+	                    				<div class="col-lg-3 col-md-4 label">국적</div>
+	                    				<div class="col-lg-9 col-md-8">대한민국</div>
 	                  				</div>
 				                  	<div class="row">
-				                    	<div class="col-lg-3 col-md-4 label">Address</div>
-				                    	<div class="col-lg-9 col-md-8">A108 Adam Street, New York, NY 535022</div>
+				                    	<div class="col-lg-3 col-md-4 label">주소</div>
+				                    	<div class="col-lg-9 col-md-8">경기도 김포시</div>
 				                  	</div>
-				                  	<div class="row">
-					                    <div class="col-lg-3 col-md-4 label">Phone</div>
-					                    <div class="col-lg-9 col-md-8">(436) 486-3538 x29071</div>
+	                  				<div class="row">
+	                    				<div class="col-lg-3 col-md-4 label">전화번호</div>
+	                    				<div class="col-lg-9 col-md-8">010-1234-5678</div>
+	                  				</div>
+				                 	<div class="row">
+				                    	<div class="col-lg-3 col-md-4 label">이메일</div>
+				                    	<div class="col-lg-9 col-md-8">wnsgur364@naver.com</div>
 				                  	</div>
-			                 	 	<div class="row">
-					                    <div class="col-lg-3 col-md-4 label">Email</div>
-					                    <div class="col-lg-9 col-md-8">k.anderson@example.com</div>
-			                 	 	</div>
 	               				</div>
 	                			<div class="tab-pane fade profile-edit pt-3" id="profile-edit">
 	                  				<!-- Profile Edit Form -->
 	                  				<form>
 	                    				<div class="row mb-3">
-	                      					<label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
+	                      					<label for="fullName" class="col-md-4 col-lg-3 col-form-label">이름</label>
 	                      					<div class="col-md-8 col-lg-9">
-	                        					<input name="fullName" type="text" class="form-control" id="fullName" value="Kevin Anderson">
+	                        					<input name="fullName" type="text" class="form-control" id="fullName" value="이준혁">
 	                      					</div>
 	                    				</div>
 	                    				<div class="row mb-3">
-	                      					<label for="about" class="col-md-4 col-lg-3 col-form-label">About</label>
+	                      					<label for="about" class="col-md-4 col-lg-3 col-form-label">내용</label>
 	                      					<div class="col-md-8 col-lg-9">
-	                        					<textarea name="about" class="form-control" id="about" style="height: 100px">Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga sequi sed ea saepe at unde.</textarea>
+	                        					<textarea name="about" class="form-control" id="about" style="height: 100px">이준혁 개인 프로젝트 KOKOA BANK 관리자 페이지</textarea>
 	                      					</div>
 	                    				</div>
 	                    				<div class="row mb-3">
-	                      					<label for="company" class="col-md-4 col-lg-3 col-form-label">Company</label>
+	                      					<label for="gender" class="col-md-4 col-lg-3 col-form-label">성별</label>
 	                      					<div class="col-md-8 col-lg-9">
-	                        					<input name="company" type="text" class="form-control" id="company" value="Lueilwitz, Wisoky and Leuschke">
+	                        					<input name="gender" type="text" class="form-control" id="gender" value="남자">
 	                     					</div>
 	                    				</div>
 	                    				<div class="row mb-3">
-	                      					<label for="Job" class="col-md-4 col-lg-3 col-form-label">Job</label>
+	                      					<label for="dob" class="col-md-4 col-lg-3 col-form-label">생년월일</label>
 	                      					<div class="col-md-8 col-lg-9">
-	                        					<input name="job" type="text" class="form-control" id="Job" value="Web Designer">
+	                        					<input name="dob" type="text" class="form-control" id="dob" value="1991.02.10">
 	                      					</div>
 	                    				</div>
 					                    <div class="row mb-3">
-	                      					<label for="Country" class="col-md-4 col-lg-3 col-form-label">Country</label>
+	                      					<label for="Country" class="col-md-4 col-lg-3 col-form-label">국적</label>
 	                      					<div class="col-md-8 col-lg-9">
-	                        					<input name="country" type="text" class="form-control" id="Country" value="USA">
+	                        					<input name="country" type="text" class="form-control" id="Country" value="대한민국">
 	                      					</div>
 	                   					</div>
 	                    				<div class="row mb-3">
-	                      					<label for="Address" class="col-md-4 col-lg-3 col-form-label">Address</label>
+	                      					<label for="Address" class="col-md-4 col-lg-3 col-form-label">주소</label>
 	                      					<div class="col-md-8 col-lg-9">
-	                        					<input name="address" type="text" class="form-control" id="Address" value="A108 Adam Street, New York, NY 535022">
+	                        					<input name="address" type="text" class="form-control" id="Address" value="경기도 김포시">
 	                      					</div>
 	                    				</div>
 					                    <div class="row mb-3">
-	               				      		<label for="Phone" class="col-md-4 col-lg-3 col-form-label">Phone</label>
+	               				      		<label for="Phone" class="col-md-4 col-lg-3 col-form-label">전화번호</label>
 	                      					<div class="col-md-8 col-lg-9">
-	                        					<input name="phone" type="text" class="form-control" id="Phone" value="(436) 486-3538 x29071">
+	                        					<input name="phone" type="text" class="form-control" id="Phone" value="(010-1234-5678">
 	                      					</div>
 	                    				</div>
 	                    				<div class="row mb-3">
-	                      					<label for="Email" class="col-md-4 col-lg-3 col-form-label">Email</label>
+	                      					<label for="Email" class="col-md-4 col-lg-3 col-form-label">이메일</label>
 	                      					<div class="col-md-8 col-lg-9">
-	                        					<input name="email" type="email" class="form-control" id="Email" value="k.anderson@example.com">
+	                        					<input name="email" type="email" class="form-control" id="Email" value="wnsgur364@naver.com">
 	                      					</div>
 	                    				</div>
 	                    				<div class="text-center">
-	                      					<button type="submit" class="btn btn-outline-secondary">Save Changes</button>
+	                      					<button type="submit" class="btn btn-outline-secondary">프로필 변경</button>
 	                    				</div>
 	                  				</form>
 	                			</div>
@@ -151,25 +150,25 @@
 	                  				<!-- Change Password Form -->
 	                  				<form>
 	                    				<div class="row mb-3">
-	                      					<label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Current Password</label>
+	                      					<label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">기존 비밀번호</label>
 	                      					<div class="col-md-8 col-lg-9">
 	                        					<input name="password" type="password" class="form-control" id="currentPassword">
 	                      					</div>
 	                    				</div>
 	                    				<div class="row mb-3">
-	                      					<label for="newPassword" class="col-md-4 col-lg-3 col-form-label">New Password</label>
+	                      					<label for="newPassword" class="col-md-4 col-lg-3 col-form-label">신규 비밀번호</label>
 	                      					<div class="col-md-8 col-lg-9">
 	                        					<input name="newpassword" type="password" class="form-control" id="newPassword">
 	                      					</div>
 	                    				</div>
 	                    				<div class="row mb-3">
-	                      					<label for="renewPassword" class="col-md-4 col-lg-3 col-form-label">Re-enter New Password</label>
+	                      					<label for="renewPassword" class="col-md-4 col-lg-3 col-form-label">신규 비밀번호 확인</label>
 	                   						<div class="col-md-8 col-lg-9">
 	                     						<input name="renewpassword" type="password" class="form-control" id="renewPassword">
 	                   						</div>
 	                 					</div>
 	                    				<div class="text-center">
-	                      					<button type="submit" class="btn btn-outline-secondary">Change Password</button>
+	                      					<button type="submit" class="btn btn-outline-secondary">비밀번호 변경</button>
 	                    				</div>
 	                  				</form>
 	                			</div>
