--- a/html/admin/adminMain.html
+++ b/html/admin/adminMain.html
@@ -50,9 +50,6 @@
 				                <li class="nav-item">
 	                  				<button class="nav-link text-dark" data-bs-toggle="tab" data-bs-target="#profile-edit">프로필 수정</button>
 	                			</li>
-	                			<li class="nav-item">
-	                  				<button class="nav-link text-dark" data-bs-toggle="tab" data-bs-target="#profile-change-password">비밀번호 변경</button>
-	                			</li>
 	              			</ul>
 	              			<div class="tab-content pt-2">
 	                			<div class="tab-pane fade show active profile-overview" id="profile-overview">
@@ -130,7 +127,7 @@
 					                    <div class="row mb-3">
 	               				      		<label for="Phone" class="col-md-4 col-lg-3 col-form-label">전화번호</label>
 	                      					<div class="col-md-8 col-lg-9">
-	                        					<input name="phone" type="text" class="form-control" id="Phone" value="(010-1234-5678">
+	                        					<input name="phone" type="text" class="form-control" id="Phone" value="010-1234-5678">
 	                      					</div>
 	                    				</div>
 	                    				<div class="row mb-3">
@@ -141,34 +138,6 @@
 	                    				</div>
 	                    				<div class="text-center">
 	                      					<button type="submit" class="btn btn-outline-secondary">프로필 변경</button>
-	                    				</div>
-	                  				</form>
-	                			</div>
-	                			<div class="tab-pane fade pt-3" id="profile-settings">
-	                			</div>
-	                			<div class="tab-pane fade pt-3" id="profile-change-password">
-	                  				<!-- Change Password Form -->
-	                  				<form>
-	                    				<div class="row mb-3">
-	                      					<label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">기존 비밀번호</label>
-	                      					<div class="col-md-8 col-lg-9">
-	                        					<input name="password" type="password" class="form-control" id="currentPassword">
-	                      					</div>
-	                    				</div>
-	                    				<div class="row mb-3">
-	                      					<label for="newPassword" class="col-md-4 col-lg-3 col-form-label">신규 비밀번호</label>
-	                      					<div class="col-md-8 col-lg-9">
-	                        					<input name="newpassword" type="password" class="form-control" id="newPassword">
-	                      					</div>
-	                    				</div>
-	                    				<div class="row mb-3">
-	                      					<label for="renewPassword" class="col-md-4 col-lg-3 col-form-label">신규 비밀번호 확인</label>
-	                   						<div class="col-md-8 col-lg-9">
-	                     						<input name="renewpassword" type="password" class="form-control" id="renewPassword">
-	                   						</div>
-	                 					</div>
-	                    				<div class="text-center">
-	                      					<button type="submit" class="btn btn-outline-secondary">비밀번호 변경</button>
 	                    				</div>
 	                  				</form>
 	                			</div>
