--- a/html/admin/adminModification.html
+++ b/html/admin/adminModification.html
@@ -39,91 +39,129 @@
 	</header>
 	<main id="main" class="main">
 	    <div class="pagetitle">
-      		<h1>수수료관리</h1>
+      		<h1>데이터 수정</h1>
       		<nav>
         		<ol class="breadcrumb">
           			<li class="breadcrumb-item"><a href="#">KOKOA BANK</a></li>
-          			<li class="breadcrumb-item active">수수료관리</li>
+          			<li class="breadcrumb-item active">데이터 수정</li>
         		</ol>
       		</nav>
     	</div>
 	    <div class="col-lg-12">
-
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Custom Styled Validation</h5>
-              <p>For custom Bootstrap form validation messages, you’ll need to add the <code>novalidate</code> boolean attribute to your <code>&lt;form&gt;</code>. This disables the browser default feedback tooltips, but still provides access to the form validation APIs in JavaScript. </p>
-
-              <!-- Custom Styled Validation -->
-              <form class="row g-3 needs-validation" novalidate>
-              <div class="col-md-12">
-                <div class="form-floating">
-                    <input type="text" class="form-control" id="floatingName" placeholder="Your Name" required>
-                    <label for="floatingName">Your Name</label>
-                    <div class="invalid-feedback">
-                    Looks good!
-                  	</div>
-                </div>
-               </div>
-                <div class="col-md-4">
-                  <label for="validationCustom02" class="form-label">Last name</label>
-                  <input type="text" class="form-control" id="validationCustom02" value="Doe" required>
-                  <div class="invalid-feedback">
-                    Looks good!
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <label for="validationCustomUsername" class="form-label">Username</label>
-                  <div class="input-group has-validation">
-                    <span class="input-group-text" id="inputGroupPrepend">@</span>
-                    <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-                    <div class="invalid-feedback">
-                      Please choose a username.
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <label for="validationCustom03" class="form-label">City</label>
-                  <input type="text" class="form-control" id="validationCustom03" required>
-                  <div class="invalid-feedback">
-                    Please provide a valid city.
-                  </div>
-                </div>
-                <div class="col-md-3">
-                  <label for="validationCustom04" class="form-label">State</label>
-                  <select class="form-select" id="validationCustom04" required>
-                    <option selected disabled value="">Choose...</option>
-                    <option>...</option>
-                  </select>
-                  <div class="invalid-feedback">
-                    Please select a valid state.
-                  </div>
-                </div>
-                <div class="col-md-3">
-                  <label for="validationCustom05" class="form-label">Zip</label>
-                  <input type="text" class="form-control" id="validationCustom05" required>
-                  <div class="invalid-feedback">
-                    Please provide a valid zip.
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                    <label class="form-check-label" for="invalidCheck">
-                      Agree to terms and conditions
-                    </label>
-                    <div class="invalid-feedback">
-                      You must agree before submitting.
-                    </div>
-                  </div>
-                </div>
-                <div class="d-flex justify-content-center">
-					<button class="btn btn-outline-secondary" id="submitForm" type="submit">저장</button>
-					<button class="btn btn-outline-secondary btnCancel" type="button">뒤로</button>
-				</div>
-              </form><!-- End Custom Styled Validation -->
-            </div>
-          </div>
+          	<div class="card">
+            	<div class="card-body">
+              		<h5 class="card-title">선택한 테이블</h5>
+              		<p>정보수정 설명</p>
+              		<!-- Custom Styled Validation -->
+              		<form class="row g-3 needs-validation" novalidate>
+              			<div class="col-md-2">
+		                  	<select class="form-select" id="validationCustom04" required>
+		                    	<option selected disabled value="">선택</option>
+		                    	<option>...</option>
+		                  	</select>
+		                  	<div class="invalid-feedback">
+		                    	Please select a valid state.
+		                  	</div>
+		                </div>
+              			<div class="col-md-12">
+                			<div class="form-floating">
+                    			<input type="text" class="form-control" id="floatingName" placeholder="Your Name" required>
+                    			<label for="floatingName">Your Name</label>
+                    			<div class="invalid-feedback">
+                    				Looks good!
+                  				</div>
+               				</div>
+               			</div>
+               			<div class="col-md-4">
+                			<div class="form-floating">
+                    			<input type="text" class="form-control" id="floatingName" placeholder="Your Name" required>
+                    			<label for="floatingName">Your Name</label>
+                    			<div class="invalid-feedback">
+                    				Looks good!
+                  				</div>
+               				</div>
+               			</div>
+               			<div class="col-md-4">
+                			<div class="form-floating">
+                    			<input type="text" class="form-control" id="floatingName" placeholder="Your Name" required>
+                    			<label for="floatingName">Your Name</label>
+                    			<div class="invalid-feedback">
+                    				Looks good!
+                  				</div>
+               				</div>
+               			</div>
+               			<div class="col-md-6">
+                			<div class="form-floating">
+                    			<input type="text" class="form-control" id="floatingName" placeholder="Your Name" required>
+                    			<label for="floatingName">Your Name</label>
+                    			<div class="invalid-feedback">
+                    				Looks good!
+                  				</div>
+               				</div>
+               			</div>
+               			<div class="col-md-6">
+                			<div class="form-floating">
+                    			<input type="text" class="form-control" id="floatingName" placeholder="Your Name" required>
+                    			<label for="floatingName">Your Name</label>
+                    			<div class="invalid-feedback">
+                    				Looks good!
+                  				</div>
+               				</div>
+               			</div>
+               			<div class="col-md-3">
+                			<div class="form-floating">
+                    			<input type="text" class="form-control" id="floatingName" placeholder="Your Name" required>
+                    			<label for="floatingName">Your Name</label>
+                    			<div class="invalid-feedback">
+                    				Looks good!
+                  				</div>
+               				</div>
+               			</div>
+               			<div class="col-md-3">
+                			<div class="form-floating">
+                    			<input type="text" class="form-control" id="floatingName" placeholder="Your Name" required>
+                    			<label for="floatingName">Your Name</label>
+                    			<div class="invalid-feedback">
+                    				Looks good!
+                  				</div>
+               				</div>
+               			</div>
+               			<div class="col-md-3">
+                			<div class="form-floating">
+                    			<input type="text" class="form-control" id="floatingName" placeholder="Your Name" required>
+                    			<label for="floatingName">Your Name</label>
+                    			<div class="invalid-feedback">
+                    				Looks good!
+                  				</div>
+               				</div>
+               			</div>
+               			<div class="col-md-3">
+                			<div class="form-floating">
+                    			<input type="text" class="form-control" id="floatingName" placeholder="Your Name" required>
+                    			<label for="floatingName">Your Name</label>
+                    			<div class="invalid-feedback">
+                    				Looks good!
+                  				</div>
+               				</div>
+               			</div>
+                		<div class="col-12">
+                  			<div class="form-check">
+                    			<input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                    			<label class="form-check-label" for="invalidCheck">
+                      				Agree to terms and conditions
+                    			</label>
+                    			<div class="invalid-feedback">
+                      				You must agree before submitting.
+                    			</div>
+                  			</div>
+                		</div>
+                		<div class="d-flex justify-content-center">
+							<button class="btn btn-outline-secondary" id="submitForm" type="submit">저장</button>
+							<button class="btn btn-outline-secondary btnCancel" type="button">뒤로</button>
+						</div>
+              		</form>
+            	</div>
+          	</div>
 		</div>	
 	</main>
   	<footer id="footer" class="footer" style="width: 1180px; margin: auto;">
