--- a/PortFolio/index.html
+++ b/PortFolio/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Portfolio</title>
+	<title>PortFolio</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<!-- Google Fonts -->
@@ -22,7 +22,7 @@
 	
 	    	<a href="#" class="logo d-flex align-items-center  me-auto me-lg-0">
 	     	<!-- <img src="assets/img/logo.png" alt=""> -->
-      			<h1>Portfolio</h1>
+      			<h1>PortFolio</h1>
 	    	</a>
 	    	<div class="header-social-links">
 	      		<a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -81,7 +81,7 @@
   	<footer id="footer" class="footer">
     	<div class="container">
       		<div class="copyright">
-        		&copy; Copyright <strong><span>Portfolio</span></strong>. All Rights Reserved
+        		&copy; Copyright <strong><span>PortFolio</span></strong>. All Rights Reserved
       		</div>
     	</div>
   	</footer>
