--- a/PortFolio/index.html
+++ b/PortFolio/index.html
@@ -30,32 +30,19 @@
 	      	<div class="container page-header">
 	        	<div class="row gy-4 justify-content-center">
 	          		<div class="col-lg-4">
-	            		<img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+	            		<img src="assets/img/profile-img.png" class="img-fluid" alt="">
 	          		</div>
 		          	<div class="col-lg-5 content">
-		            	<h2>Professional Photographer from New York</h2>
-		            	<p class="fst-italic py-3">
-		              		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-		              		magna aliqua.
-		            	</p>
-		            	<div class="row">
-		              		<div class="col-lg-6">
-		                		<ul>
-		                  			<li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-		                  			<li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-		                  			<li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-		                  			<li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-		                		</ul>
-		              		</div>
-			              	<div class="col-lg-6">
-			                	<ul>
-			                  		<li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-			                  		<li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-			                  		<li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-			                  		<li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-			                	</ul>
-			          		</div>
-						</div>
+	            		<h2>포트폴리오</h2>
+	              		<div class="col-lg-8">
+	                		<ul>
+	                			<li><i class="bi bi-chevron-right"></i> <strong>이름:</strong> <span>이준혁</span></li>
+	                  			<li><i class="bi bi-chevron-right"></i> <strong>생년월일:</strong> <span>1991.02.10</span></li>
+	                  			<li><i class="bi bi-chevron-right"></i> <strong>전화번호:</strong> <span>010-4157-1242</span></li>
+	                  			<li><i class="bi bi-chevron-right"></i> <strong>거주지:</strong> <span>김포</span></li>
+		                  		<li><i class="bi bi-chevron-right"></i> <strong>이메일:</strong> <span>wnsgur364@naver.com</span></li>
+	                		</ul>
+	              		</div>
 					</div>
 				</div>
 			</div>
@@ -63,8 +50,18 @@
 	    <section id="testimonials" class="testimonials">
 	      	<div class="container">
 	        	<div class="row text-center">
-	          		<div class="col-6">rrr</div>
-	          		<div class="col-6">rrr</div>
+	          		<div class="col-6">
+						<a href="../html/index.html">
+							<h2>KOKOA BANK</h2>
+							<img src="assets/img/pf1.png" class="rounded">
+						</a>
+					</div>
+	          		<div class="col-6">
+						<a href="../html/admin/adminMain.html">
+							<h2>KOKOA BANK ADMIN</h2>
+							<img src="assets/img/pfad1.png" class="rounded">
+						</a>
+					</div>
 	        	</div>
 	      	</div>
 	   	</section>
