--- a/PortFolio/index.html
+++ b/PortFolio/index.html
@@ -13,6 +13,9 @@
 	<!-- Vendor CSS Files -->
 	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+	<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+	<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+	<link href="assets/vendor/aos/aos.css" rel="stylesheet">
 	<!-- Template Main CSS File -->
 	<link href="assets/css/main.css" rel="stylesheet">
 </head>
@@ -21,7 +24,7 @@
 	  	<div class="container-fluid d-flex align-items-center justify-content-between">
 	    	<a href="#" class="logo d-flex align-items-center  me-auto me-lg-0">
 	     	<!-- <img src="assets/img/logo.png" alt=""> -->
-      			<h1>PortFolio</h1>
+      			<h1>포트폴리오</h1>
 	    	</a>
 	  	</div>
 	</header>
@@ -30,10 +33,9 @@
 	      	<div class="container page-header">
 	        	<div class="row gy-4 justify-content-center">
 	          		<div class="col-lg-4">
-	            		<img src="assets/img/profile-img.png" class="img-fluid" alt="">
+	            		<img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
 	          		</div>
 		          	<div class="col-lg-5 content">
-	            		<h2>포트폴리오</h2>
 	              		<div class="col-lg-8">
 	                		<ul>
 	                			<li><i class="bi bi-chevron-right"></i> <strong>이름:</strong> <span>이준혁</span></li>
@@ -50,19 +52,20 @@
 	    <section id="testimonials" class="testimonials">
 	      	<div class="container">
 	        	<div class="row text-center">
-	          		<div class="col-6">
-						<a href="../html/index.html">
+	          		<div class="col-6 profile">
+						<a href="../html/index.html" target="_blank">
 							<h2>KOKOA BANK</h2>
 							<img src="assets/img/pf1.png" class="rounded">
 						</a>
 					</div>
-	          		<div class="col-6">
-						<a href="../html/admin/adminMain.html">
+	          		<div class="col-6 profile mt-auto">
+						<a href="../html/admin/adminMain.html" target="_blank">
 							<h2>KOKOA BANK ADMIN</h2>
 							<img src="assets/img/pfad1.png" class="rounded">
 						</a>
 					</div>
 	        	</div>
+	        	<div class="swiper-pagination"></div>
 	      	</div>
 	   	</section>
 	</main>
@@ -79,6 +82,10 @@
   	</div>
 	<!-- Vendor JS Files -->
 	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+	<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+	<script src="assets/vendor/aos/aos.js"></script>
+	<script src="assets/vendor/php-email-form/validate.js"></script>
 	<!-- Template Main JS File -->
 	<script src="assets/js/main.js"></script>
 </body>
