--- a/PortFolio/index.html
+++ b/PortFolio/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
 	<header id="header" class="header d-flex align-items-center fixed-top">
-	  	<div class="container-fluid d-flex align-items-center justify-content-between">
-	    	<a href="#" class="logo d-flex align-items-center  me-auto me-lg-0">
+	  	<div class="container-fluid d-flex align-items-center justify-content-center">
+	    	<a href="#" class="logo d-flex align-items-center me-auto me-lg-0">
 	     	<!-- <img src="assets/img/logo.png" alt=""> -->
       			<h1>포트폴리오</h1>
 	    	</a>
