포트폴리오

--- a/PortFolio/index.html
+++ b/PortFolio/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>PortFolio</title>
+	<title>포트폴리오</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 	<!-- Google Fonts -->
@@ -33,16 +33,18 @@
 	      	<div class="container page-header">
 	        	<div class="row gy-4 justify-content-center">
 	          		<div class="col-lg-4">
-	            		<img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+	            		<img src="assets/img/profile-img.jpg" class="img-fluid rounded" alt="">
 	          		</div>
 		          	<div class="col-lg-5 content">
 	              		<div class="col-lg-8">
 	                		<ul>
 	                			<li><i class="bi bi-chevron-right"></i> <strong>이름:</strong> <span>이준혁</span></li>
+	                			<li><i class="bi bi-chevron-right"></i> <strong>성별:</strong> <span>남자</span></li>
 	                  			<li><i class="bi bi-chevron-right"></i> <strong>생년월일:</strong> <span>1991.02.10</span></li>
-	                  			<li><i class="bi bi-chevron-right"></i> <strong>전화번호:</strong> <span>010-4157-1242</span></li>
-	                  			<li><i class="bi bi-chevron-right"></i> <strong>거주지:</strong> <span>김포</span></li>
-		                  		<li><i class="bi bi-chevron-right"></i> <strong>이메일:</strong> <span>wnsgur364@naver.com</span></li>
+	                  			<li><i class="bi bi-chevron-right"></i> <strong>국적:</strong> <span>대한민국</span></li>
+	                  			<li><i class="bi bi-chevron-right"></i> <strong>주소:</strong> <span>경기도 김포시</span></li>
+	                  			<li><i class="bi bi-chevron-right"></i> <strong>전화번호:</strong> <span>010-1234-5678</span></li>
+		                  		<li><i class="bi bi-chevron-right"></i> <strong>이메일:</strong> <span>example@example.com</span></li>
 	                		</ul>
 	              		</div>
 					</div>
@@ -52,13 +54,13 @@
 	    <section id="testimonials" class="testimonials">
 	      	<div class="container">
 	        	<div class="row text-center">
-	          		<div class="col-6 profile">
+	          		<div class="col-lg-6">
 						<a href="../html/index.html" target="_blank">
 							<h2>KOKOA BANK</h2>
 							<img src="assets/img/pf1.png" class="rounded">
 						</a>
 					</div>
-	          		<div class="col-6 profile mt-auto">
+	          		<div class="col-lg-6">
 						<a href="../html/admin/adminMain.html" target="_blank">
 							<h2>KOKOA BANK ADMIN</h2>
 							<img src="assets/img/pfad1.png" class="rounded">
@@ -72,7 +74,7 @@
   	<footer id="footer" class="footer">
     	<div class="container">
       		<div class="copyright">
-        		&copy; Copyright <strong><span>PortFolio</span></strong>. All Rights Reserved
+        		&copy; Copyright <strong><span>포트폴리오</span></strong>. All Rights Reserved
       		</div>
     	</div>
   	</footer>
