--- a/html/admin/adminMain.html
+++ b/html/admin/adminMain.html
@@ -82,7 +82,7 @@
 	                  				</div>
 				                 	<div class="row">
 				                    	<div class="col-lg-3 col-md-4 label">이메일</div>
-				                    	<div class="col-lg-9 col-md-8">wnsgur364@naver.com</div>
+				                    	<div class="col-lg-9 col-md-8">example@exmple.com</div>
 				                  	</div>
 	               				</div>
 	                			<div class="tab-pane fade profile-edit pt-3" id="profile-edit">
@@ -133,7 +133,7 @@
 	                    				<div class="row mb-3">
 	                      					<label for="Email" class="col-md-4 col-lg-3 col-form-label">이메일</label>
 	                      					<div class="col-md-8 col-lg-9">
-	                        					<input name="email" type="email" class="form-control" id="Email" value="wnsgur364@naver.com">
+	                        					<input name="email" type="email" class="form-control" id="Email" value="example@exmple.com">
 	                      					</div>
 	                    				</div>
 	                    				<div class="text-center">
