--- a/PortFolio/index.html
+++ b/PortFolio/index.html
@@ -13,9 +13,6 @@
 	<!-- Vendor CSS Files -->
 	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-	<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-	<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-	<link href="assets/vendor/aos/aos.css" rel="stylesheet">
 	<!-- Template Main CSS File -->
 	<link href="assets/css/main.css" rel="stylesheet">
 </head>
@@ -54,6 +51,7 @@
 	    <section id="testimonials" class="testimonials">
 	      	<div class="container">
 	        	<div class="row text-center">
+	        		<h2>개인프로젝트</h2>
 	          		<div class="col-lg-6">
 						<a href="../html/index.html" target="_blank">
 							<h2>KOKOA BANK</h2>
@@ -67,7 +65,6 @@
 						</a>
 					</div>
 	        	</div>
-	        	<div class="swiper-pagination"></div>
 	      	</div>
 	   	</section>
 	</main>
@@ -84,10 +81,6 @@
   	</div>
 	<!-- Vendor JS Files -->
 	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-	<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-	<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-	<script src="assets/vendor/aos/aos.js"></script>
-	<script src="assets/vendor/php-email-form/validate.js"></script>
 	<!-- Template Main JS File -->
 	<script src="assets/js/main.js"></script>
 </body>
